--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@
 
 #sign-up{
     background-color: #3882F6;
-    width: 50%;
+    max-width: 600px;
     display: flex;
     justify-content: center;
     margin: auto;
