--- a/style.css
+++ b/style.css
@@ -1,14 +1,25 @@
-#header, #banner{
+#header{
     display:flex;
     justify-content: space-around;
     background-color: #1F2937;
 }
 
 #banner{
+   
   
    padding: 32px;
+   display: flex;
+    justify-content: space-around;
+    max-width: 1000px;
 }
 
+
+#fullbanner-background{
+    background-color: #1F2937; 
+    display: flex;
+    justify-content: center;
+    
+}
 
 #title-header{
     color:#F9FAF8;
@@ -32,7 +43,7 @@
     padding-right:64px;
     padding-left: 64px;
     display: flex;
-  flex-basis: 500px;
+  flex-basis: 700px;
   justify-content: center;
     
 }
