Title added and tidy up on images on main content

--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@
     display: flex;
     flex-direction: column;
     font-family: 'Courier New', Courier, monospace;
+    justify-content:flex-end;
 }
 
 #quote{
